Add header and how it works pages

--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -1,6 +1,9 @@
 <header>
-    <nav class="navbar navbar-expand-lg navbar-dark bg-burgundy box-shadow">
-        <a class="navbar-brand" href="/">Health Calc</a>
+    <nav class="navbar navbar-expand-lg navbar-light">
+        <a class="navbar-brand" href="/">
+          <img src="/images/logo.gif"  width="70" height="70" alt="">
+          <span>HBE</span>
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarToggler" aria-controls="navbarTogglerDemo03" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
         </button>
@@ -8,13 +11,13 @@
         <div class="collapse navbar-collapse" id="navbarToggler">
           <ul class="navbar-nav ml-auto mt-2 mt-lg-0">
             <li class="nav-item active">
-              <a class="nav-link" href="/how-it-works">How it works <span class="sr-only">(current)</span></a>
+              <a class="nav-link" href="/about">How it works <span class="sr-only">(current)</span></a>
             </li>
             <li class="nav-item">
               <a class="nav-link" href="/contact">Contact Us</a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="/app">Contact Us</a>
+              <a class="nav-link btn hbe-btn-nav" href="/app">Get Started</a>
             </li>
           </ul>
         </div>
