--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -1,3 +1,4 @@
 <title>HBE - Health Bill Estimator - <%= title %></title>
+<link href="https://fonts.googleapis.com/css?family=Amatic+SC|Raleway" rel="stylesheet">
 <link type="text/css" rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 <link type="text/css" rel="stylesheet" href="/css/style.css">
