modified contact us

--- a/views/pages/contact.ejs
+++ b/views/pages/contact.ejs
@@ -8,31 +8,11 @@
 <body>
     <%- include('../partials/header.ejs'); %>
     <main>
-         <section class="pt-5">
-            <div class="container-fluid text-center">
-                <h3 class="title">What is it?</h3>
-                <div class="row">
-                    <div class="col-sm-8 offset-sm-2">
-                        <p> It is a platform to estimate hospital bills. It was conceptualized and developed by the Swift Miners team for the WINHACKS 2021 competition.
-                            Find out more <a href="/">here.</a>
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
-        
-        <section class="pt-5">
-            <div class="container-fluid text-center">
-                <h3 class="title">How it works?</h3>
-                <div class="row">
-                    <div class="col-sm-8 offset-sm-2">
-                        <p> When you fill out the form <a href="/app">here</a>, we take your details and produce an estimate of your hospital bill based on our model.
-                            We have used a regression model to train our data set. However we're still open to retrieving more data to improve our model.
-                        </p>
-                    </div>
-                </div>
-            </div>
-        </section>
+      <section>
+          <div>
+              <img src="/images/Group 3.png" width="220" height="164" alt="" class="picture1" >
+          </div>
+      </section>
     </main>
     <%- include('../partials/footer.ejs'); %>
 </body>
