--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -13,7 +13,7 @@
             <li class="nav-item active">
               <a class="nav-link" href="/about">How it works <span class="sr-only">(current)</span></a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
               <a class="nav-link" href="/contact">Contact Us</a>
             </li>
             <li class="nav-item">
