--- a/views/pages/predict.ejs
+++ b/views/pages/predict.ejs
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <%- include('../partials/head.ejs', {title: 'Search Results'}); %>
+    <%- include('../partials/head.ejs', {title: 'Predicition Results'}); %>
 </head>
 <body>
     <%- include('../partials/header.ejs'); %>
